modifed background color

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
+    background-color: aliceblue;
     align-items: center;
     text-align: center;
-    margin-top: 15%;
+    margin-top: 10%;
 }
 
 img {
